--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -10,7 +10,9 @@ on:
   #  branches: 
   #    - master
   schedule:
-    - cron: "*/18 0-15 * * *"
+  # - cron: "*/18 0-15 * * *"
+  # 每天8点唤醒一次，后面又LeanCloud定时任务唤醒    
+    - cron: "0 0 * * *"
   watch:
     types: [started]
    
