--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -38,8 +38,8 @@ jobs:
         echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
     - name: Commit #更新日志到GitHub仓库
       run: |
-        git config --global user.email AutoWakeUp@email.com
-        git config --global user.name AutoWakeUp
+        git config --global user.email 928264247@qq.com
+        git config --global user.name loenzo
         git add .
         git commit -m "Successfully Wake" -a
     - name: Push changes
