--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -32,9 +32,9 @@ jobs:
         pip install requests
     - name: Waking  #读取站点信息
       env: 
-        $CONFIG_SITE: ${{ secrets.Site }} # 读取评论后台地址
+        $CONFIG_SITE: ${{ secrets.SITE }} # 读取评论后台地址
       run: | 
-        python run.py ${{ secrets.Site }}
+        python run.py ${{ secrets.SITE }}
         echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
     - name: Commit #更新日志到GitHub仓库
       run: |
