--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -11,9 +11,10 @@ on:
   #    - master
   schedule:
   # - cron: "*/18 0-15 * * *"
-  # - cron: "0 0/25 0-16 * * ?"
-  # 每天8点唤醒一次，后面又LeanCloud定时任务唤醒    
-    - cron: "0 0 * * *"
+  # 每天8点到16点，每29分钟唤醒一次
+   - cron: "0 0/25 0-16 * * ?"
+  # 每天8点唤醒一次，后面有LeanCloud定时任务唤醒    
+  # - cron: "0 0 * * *"
   watch:
     types: [started]
    
