--- a/.github/workflows/autoWakeup.yml
+++ b/.github/workflows/autoWakeup.yml
@@ -12,7 +12,7 @@ on:
   schedule:
   # - cron: "*/18 0-15 * * *"
   # 每天8点到16点，每29分钟唤醒一次
-   - cron: "0 0/25 0-16 * * ?"
+   - cron: "*/29 8-18 * * *"
   # 每天8点唤醒一次，后面有LeanCloud定时任务唤醒    
   # - cron: "0 0 * * *"
   watch:
